fix alignment and positioning of segmented controls

--- a/src/Components/SegmentedTabs/SegmentedTabs.module.scss
+++ b/src/Components/SegmentedTabs/SegmentedTabs.module.scss
@@ -2,19 +2,14 @@
 
 .container {
   width: 100%;
-  height: 32px;
   background: #f2f2f7;
   border-radius: 3px;
-  border: 1px solid #e6e6f0;
   position: relative;
+  margin-bottom: 10px;
 }
 
 .tabContainer {
   width: calc(100% + 2px);
-  height: 32px;
-  position: absolute;
-  top: -1px;
-  left: -1px;
   display: flex;
 }
 
@@ -23,11 +18,14 @@
   text-align: center;
   flex-grow: 1;
   color: $text-med;
-  padding: 9px 14px 0;
+  padding: 9px 14px 10px;
   cursor: pointer;
   border-right: 1px solid #e6e6f0;
   font-weight: 600;
   transition-duration: 100ms;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &:first-of-type {
     border-top-left-radius: 3px;
