--- a/src/pages/PoolPage.module.scss
+++ b/src/pages/PoolPage.module.scss
@@ -71,7 +71,7 @@
 
 .typeTabContainer {
   float: left;
-  width: 200px;
+  width: 100%;
 }
 
 .timePeriodTabContainer {
